--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="content cover text-center">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">We Are Merlin</h1>
-                        <a class="mt-0 mb-4 btn btn-danger nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
-                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>
+                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">Croissant Rouge Tunisien</h1>
+                        <a class="mt-0 mb-4 btn btn-danger nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Départ</a>
+                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">Comité Local Manouba</h3>
                     </div>
                 </div>
             </div>
