--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                             <a class="nav-link" href="#work">Dons</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#Beneficiaires">Bénéficiaires</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#Benevolat">Bénévolat</a>
                         </li>
                         <li class="nav-item">
@@ -112,11 +115,27 @@
                     <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
                 </div>
                 <div class="row  justify-content-center">
-
+                    <!--Google Data Studio-->
                 </div>
             </div>
         </div>
     </section>
+
+    <section id="Beneficiaires" class="page">
+        <div class="container">
+            <div class="content text-center">
+                <div class="heading">
+                    <h2 class="mt-0 mb-4">This is how we do it.</h2>
+                    <div class="border"></div>
+                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+                </div>
+                <div class="row  justify-content-center">
+                    <!--Google My Map-->
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="Benevolat" class="page">
         <div class="container">
             <div class="content text-center">
