--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">  </h1>
-                        <a class="mt-0 mb-4 btn btn-danger nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Départ</a>
-                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">  </h3>
+                        <!--
+                            <a class="mt-0 mb-4 btn btn-danger nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Départ</a>
+                        -->
+                            <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">  </h3>
                     </div>
                 </div>
             </div>
@@ -52,10 +54,10 @@
                             <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">Média</a>
+                            <a class="nav-link" href="#Media">Média</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#work">Dons</a>
+                            <a class="nav-link" href="#Dons">Dons</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#Beneficiaires">Bénéficiaires</a>
@@ -74,7 +76,7 @@
             </div>
         </nav>
     </div>
-    <section id="services" class="page">
+    <section id="Media" class="page">
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
@@ -106,7 +108,7 @@
             </div>
         </div>
     </section>
-    <section id="work" class="page">
+    <section id="Dons" class="page">
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
@@ -163,117 +165,20 @@
                         <div class="profile-photo">
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
-                        <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
-                            <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="http://www.facebook.com" title="Facebook">
-                                        <i class="fa fa-facebook"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.twitter.com" title="Twitter">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.linkedin.com" title="LinkedIn">
-                                        <i class="fa fa-linkedin"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.github.com" title="GitHub">
-                                        <i class="fa fa-github"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
                         <div class="profile-photo">
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
-                        </div>
-                        <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
-                            <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="http://www.dribbble.com" title="Dribbble">
-                                        <i class="fa fa-dribbble"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.pinterest.com" title="Pinterest">
-                                        <i class="fa fa-pinterest"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.instagram.com" title="Instagram">
-                                        <i class="fa fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
                         <div class="profile-photo">
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
-                        <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
-                            <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="http://www.twitter.com" title="Twitter">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://developer.android.com/index.html" title="Android Developers">
-                                        <i class="fa fa-android"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.stackoverflow.com" title="Stack Overflow">
-                                        <i class="fa fa-stack-overflow"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">
                         <div class="profile-photo">
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
-                        </div>
-                        <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus</h5>
-                            <p>QA Engineer</p>
-                            <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="http://www.plus.google.com" title="Google+">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="http://www.trello.com" title="Trello">
-                                        <i class="fa fa-trello"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="mailto:john.doe@mail.com" title="Email">
-                                        <i class="fa fa-envelope"></i>
-                                    </a>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -284,22 +189,22 @@
         <div class="container">
             <div class="content cover text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">Getting in touch.</h2>
+                    <h2 class="mt-0 mb-4">Contactez nous</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="mt-4 mb-0">Nous sommes impatients de recevoir vos commentaires, de répondre à vos demandes et de vous offrir toute l'aide dont vous aurez besoin !</p>
                 </div>
                 <div class="row">
                     <div class="col-sm-4 animated hiding" data-animation="fadeInRight" data-delay="600">
                         <i class="fa fa-map-marker fa-3x"></i>
-                        <a href="#">Mostar, Bosnia and Herzegovina</a>
+                        <a href="https://goo.gl/maps/upXbR71jVV5krf7q9">La Manouba,Tunisie</a>
                     </div>
                     <div class="col-sm-4 animated hiding" data-animation="fadeInDown" data-delay="300">
                         <i class="fa fa-phone fa-3x"></i>
-                        <a href="tel:9876543210">(987) 654-3210</a>
+                        <a href="tel:+21652539108">+216 52 539 108</a>
                     </div>
                     <div class="col-sm-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
                         <i class="fa fa-envelope fa-3x"></i>
-                        <a href="mailto:john.doe@mail.com">john.doe@mail.com</a>
+                        <a href="mailto:crtclmanouba@gmail.com">crtclmanouba@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -311,30 +216,29 @@
                 <div class="col-sm-12 animated hiding" data-animation="fadeInUp">
                     <ul class="social list-inline">
                         <li class="list-inline-item">
-                            <a class="facebook" href="http://www.facebook.com" title="Facebook">
+                            <a class="facebook" href="https://www.facebook.com/CRTCLMANOUBA" title="Facebook">
                                 <i class="fa fa-facebook fa-2x"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="twitter" href="http://www.twitter.com" title="Twitter">
+                            <a class="twitter" href="https://twitter.com/CRTCLMANOUBA " title="Twitter">
                                 <i class="fa fa-twitter fa-2x"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="google-plus" href="http://www.plus.google.com" title="Google+">
-                                <i class="fa fa-google-plus fa-2x"></i>
+                            <a class="google-plus" href="https://www.youtube.com/channel/UC4NI6CgNnTGWtdgUykXfpDw" title="Google+">
+                                <i class="fa fa-brands fa-youtube fa-2x"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="dribbble" href="http://www.linkedin.com" title="Dribbble">
-                                <i class="fa fa-dribbble fa-2x"></i>
+                            <a class="dribbble" href="https://www.linkedin.com/company/croissant-rouge-manouba" title="Dribbble">
+                                <i class="fa fa-linkedin-square fa-2x"></i>
                             </a>
                         </li>
                     </ul>
                     <p class="copyright">
-                        Created by <a href="http://halibegic.info">halibegic</a> &middot; Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> &middot; Based on <a href="http://getbootstrap.com/">Bootstrap v4</a> &middot; Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
-                        <a href="http://www.github.com/halibegic/merlin">GitHub</a> &middot;
-                        <a href="http://steamcommunity.com/id/halibegic">Buy Me a Game</a>
+                        Created by <b>CRTCLManouba</b> </a> &middot; Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> &middot; Based on <a href="http://getbootstrap.com/">Bootstrap v4</a> &middot; Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
+                         &middot;
                     </p>
                 </div>
             </div>
