--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">This is how we do it.</h2>
+                    <h2 class="mt-0 mb-4">Dons collectés</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+                    <p class="mt-4 mb-0">... </p>
                 </div>
                 <div class="row  justify-content-center">
                     <!--Google Data Studio-->
@@ -127,9 +127,9 @@
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">This is how we do it.</h2>
+                    <h2 class="mt-0 mb-4">Nombre de famille Bénéficiaires</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+                    <p class="mt-4 mb-0">...</p>
                 </div>
                 <div class="row  justify-content-center">
                     <!--Google My Map-->
@@ -142,9 +142,9 @@
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">This is how we do it.</h2>
+                    <h2 class="mt-0 mb-4">Pour nous rejoindre </h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+                    <p class="mt-4 mb-0">Merci de remplir le formulaire suivant</p>
                 </div>
                 <div class="row  justify-content-center">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMVhCuAQgx3OjIXaNztvrwjcIebSASd1PsBdp5bffKM_MkwQ/viewform?embedded=true" width="640" height="1749" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
@@ -158,7 +158,7 @@
                 <div class="heading">
                     <h2 class="mt-0 mb-4">About Us.</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor.</p>
+                    <p class="mt-4 mb-0">La Croissant-Rouge tunisien (CRT) est une association humanitaire tunisienne fondée en 1956, après l'indépendance du pays. Le CRT est l'une des sociétés nationales du <a href="https://fr.wikipedia.org/wiki/Mouvement_international_de_la_Croix-Rouge_et_du_Croissant-Rouge">Mouvement international de la Croix-Rouge et du Croissant-Rouge.</a></p>
                 </div>
                 <div class="row">
                     <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
@@ -237,8 +237,7 @@
                         </li>
                     </ul>
                     <p class="copyright">
-                        Created by CRTCLManouba</a> &middot; Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> &middot; Based on <a href="http://getbootstrap.com/">Bootstrap v4</a> &middot; Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
-                         &middot;
+                        <a>Created by CRTCLManouba © 2022</a> 
                     </p>
                 </div>
             </div>
