--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="#Benevolat">Bénévolat</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
+                            <a class="nav-link" href="#about">A propos de nous</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -189,9 +189,9 @@
         <div class="container">
             <div class="content cover text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">Contactez nous</h2>
+                    <h1 class="mt-0 mb-4">Contactez nous</h1>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Nous sommes impatients de recevoir vos commentaires, de répondre à vos demandes et de vous offrir toute l'aide dont vous aurez besoin !</p>
+                    <p class="mt-4 mb-0"><b>Nous sommes impatients de recevoir vos commentaires, de répondre à vos demandes et de vous offrir toute l'aide dont vous aurez besoin !</b></p>
                 </div>
                 <div class="row">
                     <div class="col-sm-4 animated hiding" data-animation="fadeInRight" data-delay="600">
