--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">About Us.</h2>
+                    <h2 class="mt-0 mb-4">A propos de nous</h2>
                     <div class="border"></div>
                     <p class="mt-4 mb-0">La Croissant-Rouge tunisien (CRT) est une association humanitaire tunisienne fondée en 1956, après l'indépendance du pays. Le CRT est l'une des sociétés nationales du <a href="https://fr.wikipedia.org/wiki/Mouvement_international_de_la_Croix-Rouge_et_du_Croissant-Rouge">Mouvement international de la Croix-Rouge et du Croissant-Rouge.</a></p>
                 </div>
