--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <p class="mt-4 mb-0">... </p>
                 </div>
                 <div class="row  justify-content-center">
-                    <!--Google Data Studio-->
+                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOpwTDAP0RzZ0n0cfIvl2ye54NstgqQIM0AY_hnncgMdP9Kxwps-LeEVANr-50h8r0ZZR8_byAQoxN/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                 </div>
             </div>
         </div>
