--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
                 <div class="heading">
                     <h2 class="mt-0 mb-4">Dons collectés</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">... </p>
                 </div>
                 <div class="row  justify-content-center">
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOpwTDAP0RzZ0n0cfIvl2ye54NstgqQIM0AY_hnncgMdP9Kxwps-LeEVANr-50h8r0ZZR8_byAQoxN/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <iframe width="1080" height="450" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOpwTDAP0RzZ0n0cfIvl2ye54NstgqQIM0AY_hnncgMdP9Kxwps-LeEVANr-50h8r0ZZR8_byAQoxN/pubhtml?widget=false&amp;headers=false"></iframe>
                 </div>
             </div>
         </div>
@@ -132,9 +131,7 @@
                     <p class="mt-4 mb-0">...</p>
                 </div>
                 <div class="row  justify-content-center">
-                    <!--Google My Map-->
-                </div>
-            </div>
+                    <iframe width="218" height="69" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTt7CDXrEQlXFGF0PPInbCpH5QDOQz2WHagRAxTUImCk5hpnl6oqSICHEjV27WLnd0vDcn-iVMSNtCj/pubchart?oid=1440211457&amp;format=interactive"></iframe>            </div>
         </div>
     </section>
 
@@ -147,7 +144,7 @@
                     <p class="mt-4 mb-0">Merci de remplir le formulaire suivant</p>
                 </div>
                 <div class="row  justify-content-center">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMVhCuAQgx3OjIXaNztvrwjcIebSASd1PsBdp5bffKM_MkwQ/viewform?embedded=true" width="640" height="1749" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+                    <iframe width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSeMVhCuAQgx3OjIXaNztvrwjcIebSASd1PsBdp5bffKM_MkwQ/viewform?embedded=true" >Chargement…</iframe>
                 </div>
             </div>
         </div>
