--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="fr-FR">
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Merlin HTML/CSS template">
-    <meta name="author" content="Hasan Alibegic">
+    <meta name="description" content="Croissant Rouge Tunisien - Comité Local Manouba">
+    <meta name="author" content="CRTCLManouba">
     <link rel="shortcut icon" href="fav.ico">
     <title>CRT CL Manouba - Ramadan 2022</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" async defer>
