--- a/index.html
+++ b/index.html
@@ -86,10 +86,6 @@
                 </div>
                 <div class="row justify-content-center" >
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCRTCLMANOUBA%2Fphotos%2Fa.113925373506605%2F509457487286723%2F%3Ftype%3D3&show_text=false&width=500" width="500" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
-
-
-
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCRTCLMANOUBA%2Fphotos%2Fa.113925373506605%2F511352683763870%2F%3Ftype%3D3&show_text=false&width=500" width="500" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 </div>
                 <!--
@@ -235,6 +231,11 @@
                         <li class="list-inline-item">
                             <a class="dribbble" href="https://www.linkedin.com/company/croissant-rouge-manouba" title="Dribbble">
                                 <i class="fa fa-linkedin-square fa-2x"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="dribbble" href="https://www.instagram.com/croissant.rouge.mannouba" title="Dribbble">
+                                <i class="fa fa-instagram-square fa-2x"></i>
                             </a>
                         </li>
                     </ul>
